Fix again text render. Vertical align

--- a/app/css/style.styl
+++ b/app/css/style.styl
@@ -57,7 +57,6 @@ a
   font-size 0
 
 .message-body
-  height 255px
   width 486px
   background #ccc
 
